# kuri-ros

./: README.md
teleoperation/: CMakeLists.txt  package.xml
teleoperation/cfg/: HapticTeleop.cfg
teleoperation/launch/: haptic_teleop.launch
teleoperation/params/: master_params.yaml  slave_params.yaml
teleoperation/scripts/: cyber_glove_teleop.py
teleoperation/src/: sensable_omni.cpp
